test/parser/Queries/syntax_errors/fail_K-WhereExpr-1.xq
(:********************foo***************** for ************* where * where **:)
(: Test:  eq K-WhereExpr-1      $        foo           eq         $      :)
(: Written by: Frans Englich        $      eq          for          :)
(:Date: 2006-10-05T18:29:37+02:00  $     $      where        let  foo    eq     ne :)
(: Purpose: A for/where combination where the cardinality  let of return statement is  eq affected by the sequence. :)
(:***** where ***** ne *foo************** where ************************ eq *****:)
(for $fo in where  (1, 2, 3) where where$fo  for eq 3 $fo) eq 3